[gd_scene load_steps=2 format=3 uid="uid://block_health_bar"]

[ext_resource type="Script" path="res://BlockHealthBar.gd" id="1_block_health_bar"]

[node name="BlockHealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
custom_minimum_size = Vector2(200, 40)
script = ExtResource("1_block_health_bar")

[node name="BlockBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
value = 25.0
show_percentage = false

[node name="BlockLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
text = "25/25"
horizontal_alignment = 1
vertical_alignment = 1 